--- a/subkek.conf
+++ b/subkek.conf
@@ -1,13 +1,15 @@
 [General]
+ipv6=true
+prefer-ipv6 = false
+private-ip-answer = true
 bypass-system = true
 skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,localhost,*.local,*.ru,captive.apple.com
 dns-server = https://1.1.1.1/dns-query
 fallback-dns-server = system
+update-url = https://raw.githubusercontent.com/sub-kek/vpn-russia/refs/heads/master/subkek.conf
 
 [Rule]
 DOMAIN-SUFFIX,.ru,DIRECT
 GEOIP,RU,DIRECT
 FINAL,PROXY
 
-[Host]
-localhost = 127.0.0.1
