--- a/subkek.conf
+++ b/subkek.conf
@@ -1,15 +1,16 @@
+# Shadowrocket: 2025-01-01 22:03:18
 [General]
-ipv6=true
+ipv6 = true
 prefer-ipv6 = false
 private-ip-answer = true
 bypass-system = true
-skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,localhost,*.local,*.ru,captive.apple.com
+skip-proxy = 10.0.0.0/8,172.16.0.0/12,192.168.0.0/16,*.ru
 dns-server = https://1.1.1.1/dns-query
-fallback-dns-server = system
+fallback-dns-server = 1.1.1.1
 update-url = https://raw.githubusercontent.com/sub-kek/vpn-russia/refs/heads/master/subkek.conf
 
 [Rule]
+DOMAIN-SUFFIX,lifehosting.ru,PROXY
 DOMAIN-SUFFIX,.ru,DIRECT
-GEOIP,RU,DIRECT
+GEOIP,ru,PROXY
 FINAL,PROXY
-
